--- a/Front/Projetos/bingo2/style.css
+++ b/Front/Projetos/bingo2/style.css
@@ -60,26 +60,24 @@ button:hover {
   color: white;
 }
 
-/* 
-Com grid
-
-/* .numeros {
-  margin-top: 20px;
-  display: grid;
-  grid-template-columns: repeat(10, 1fr);
-  gap: 8px;
-  max-width: 500px;
+.bingo{
+  display: flex;
+  flex-direction: row;
+  width: 50rem;
+  height: 21rem;
+  border: 2px solid red;
 }
 
-.numeros div {
-  background: #e9ecef;
-  padding: 10px;
-  border-radius: 5px;
-  text-align: center;
-  font-weight: bold;
+.coluna{
+  display: flex;
+  flex-direction: column;
+  width: 10rem;
+  height: 21rem;
+  border: 2px solid red;
+  align-items: center;
 }
 
-.numeros .sorteado {
-  background: #2a9d8f;
-  color: white;
-} */ 
+.letraClass {
+  border: 2px solid red;
+}
+
