--- a/Front/Projetos/bingoOf/style.css
+++ b/Front/Projetos/bingoOf/style.css
@@ -1,16 +1,18 @@
 body {
   font-family: Arial, sans-serif;
-  background: #f0f2f5;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
   margin: 0;
+  background-image: url(background.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 h1 {
-  color: #333;
+  color: #ffffff;
   margin-bottom: 20px;
 }
 
