--- a/Front/Aulas/React/jogovelha/src/components/Tabuleiro/Tabuleiro.css
+++ b/Front/Aulas/React/jogovelha/src/components/Tabuleiro/Tabuleiro.css
@@ -11,3 +11,33 @@
     background-color: var(--roxoEscuro);
 }
 
+.general{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 5rem;
+    margin-right: 30rem;
+}
+
+.statusContainer{
+    max-width: 10rem;
+    min-width: 10rem;
+    max-height: 10rem;
+    min-height: 10rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.botaoReiniciar{
+    width: 10rem;
+    height: 3rem;
+    background-color: var(--roxo);
+    color: var(--branco);
+    border: 1px solid var(--branco);
+    border-radius: 1rem;
+}
+
